php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #46031 Segfault in AppendIterator::next
Submitted: 2008-09-09 17:27 UTC Modified: 2008-09-09 19:44 UTC
From: felipe@php.net Assigned:
Status: Closed Package: SPL related
PHP Version: 5.2CVS, 5.3CVS, 6CVS OS:
Private report: No CVE-ID: None
 [2008-09-09 17:27 UTC] felipe@php.net
Description:
------------
See below.

Reproduce code:
---------------
<?php

$x = new appenditerator;
$x->next();

Actual result:
--------------
==25082== 
==25082== Invalid read of size 4
==25082==    at 0x81B8421: spl_append_it_next (spl_iterators.c:1449)
==25082==    by 0x83714BF: zend_do_fcall_common_helper_SPEC (zend_vm_execute.h:315)
==25082==    by 0x835F5E2: execute (zend_vm_execute.h:104)
==25082==    by 0x8339A7E: zend_execute_scripts (zend.c:1197)
==25082==    by 0x82DF76C: php_execute_script (main.c:2075)
==25082==    by 0x83D1714: main (php_cli.c:1130)
==25082==  Address 0x4 is not stack'd, malloc'd or (recently) free'd
==25082== 
==25082== Process terminating with default action of signal 11 (SIGSEGV)
==25082==  Access not within mapped region at address 0x4
==25082==    at 0x81B8421: spl_append_it_next (spl_iterators.c:1449)
==25082==    by 0x83714BF: zend_do_fcall_common_helper_SPEC (zend_vm_execute.h:315)
==25082==    by 0x835F5E2: execute (zend_vm_execute.h:104)
==25082==    by 0x8339A7E: zend_execute_scripts (zend.c:1197)
==25082==    by 0x82DF76C: php_execute_script (main.c:2075)
==25082==    by 0x83D1714: main (php_cli.c:1130)
==25082== 


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-09-09 19:44 UTC] lbarnaud@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 26 10:00:02 2026 UTC