Fixed bug #46031 (Segfault in AppendIterator::next)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@266041 c90b9560-bf6c-de11-be94-00142212c4b1